--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,14 @@
 html,
 body {
   width: 100%;
-  height: 100%;
+  height: 100vh;
 }
 
 .App {
   text-align: center;
   color: white;
   background: #319cd6;
-  height: 100%;
+  height: 100vh;
 }
 
 .login-conainer {
