--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 html,
 body {
-  width: 100%;
   height: 100vh;
   background: #319cd6;
 }
@@ -26,10 +25,9 @@ nav a:hover {
 .App {
   text-align: center;
   color: white;
-  height: 100vh;
 }
 
-.page {
-  width: 75vw;
+.container {
+  max-width: 960px;
   margin: 0 auto;
 }
