--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ body {
 
 nav {
   width: 100%;
-  background-color: #555;
+  background-image: linear-gradient(-90deg, #77d9d4, #57BC90);
   padding: 10px 0;
 }
 
@@ -15,7 +15,7 @@ nav a {
   margin: 10px;
   text-decoration: none;
   font-size: 20px;
-  color: blue;
+  color: white;
   cursor: pointer;
 }
 
@@ -34,6 +34,7 @@ h2 {
 .App {
   text-align: center;
   color: white;
+  background-color: white;
 }
 
 .container {
